; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_playloop.c_get_percent_pos.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_playloop.c_get_percent_pos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_percent_pos(%struct.MPContext* %0) #0 {
  %2 = alloca %struct.MPContext*, align 8
  %3 = alloca double, align 8
  store %struct.MPContext* %0, %struct.MPContext** %2, align 8
  %4 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %5 = call double @get_current_pos_ratio(%struct.MPContext* %4, i32 0)
  store double %5, double* %3, align 8
  %6 = load double, double* %3, align 8
  %7 = fcmp olt double %6, 0.000000e+00
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %12

9:                                                ; preds = %1
  %10 = load double, double* %3, align 8
  %11 = fmul double %10, 1.000000e+02
  br label %12

12:                                               ; preds = %9, %8
  %13 = phi double [ -1.000000e+00, %8 ], [ %11, %9 ]
  %14 = fptosi double %13 to i32
  ret i32 %14
}

declare dso_local double @get_current_pos_ratio(%struct.MPContext*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
